Closed
Bug 716845
Opened 9 years ago
Closed 9 years ago
IonMonkey: Assertion failure: current->entryResumePoint()->numOperands() == nargs + info().nlocals() + 1, at IonBuilder.cpp:332
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
Attachments
(1 file)
2.07 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
We have to set the scope chain slot when inlining. The TypeOracle's canEnterInlinedScript ensures the scope chain is not used by the inlined script, so I think it's safe to always set it to undefined. This fixes 11 jit-test failures with --ion -n.
Attachment #587268 -
Flags: review?(bhackett1024)
Updated•9 years ago
|
Attachment #587268 -
Flags: review?(bhackett1024) → review+
Assignee | ||
Comment 1•9 years ago
|
||
http://hg.mozilla.org/projects/ionmonkey/rev/717081f8e7e5
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•