Set the scope chain for inlined scripts (bug 716845, r=bhackett)